Update and display version

--- a/examples/example-android/androidBleSdkTestApp/app/build.gradle
+++ b/examples/example-android/androidBleSdkTestApp/app/build.gradle
@@ -2,14 +2,29 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
-    defaultConfig {
-        applicationId "polar.com.androidblesdk"
-        minSdkVersion 21
-        targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    def versionPropsFile = file('src/version.properties')
+
+    if (versionPropsFile.canRead()) {
+        def Properties versionProps = new Properties()
+
+        versionProps.load(new FileInputStream(versionPropsFile))
+        def name = versionProps['VERSION_NAME']
+        def code = versionProps['VERSION_CODE'].toInteger() + 1
+        versionProps['VERSION_CODE']=code.toString()
+        versionProps.store(versionPropsFile.newWriter(), null)
+
+        defaultConfig {
+            applicationId "polar.com.androidblesdk"
+            minSdkVersion 21
+            targetSdkVersion 27
+            versionCode code
+            versionName name
+        }
     }
+    else {
+        throw new GradleException("Could not read version.properties!")
+    }
+
     buildTypes {
         release {
             minifyEnabled false
